--- a/Project_4.ipynb
+++ b/Project_4.ipynb
@@ -1,11 +1,56 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Numerik Projekt 4\n",
+    "### Schaltungsmodelierung und -simulation 2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Parameter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Widerstände\n",
+    "R1 = 0\n",
+    "R2 = 0\n",
+    "R3 = 0\n",
+    "R4 = 0\n",
+    "\n",
+    "# Kondensatoren\n",
+    "C1 = 0\n",
+    "C2 = 0\n",
+    "C3 = 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Idee für Zusatzfeature:\n",
+    "\n",
+    "Bauteilgrössen mit T,G,M,k,m,u,n,p etc angeben und String entsprechend interpretieren."
+   ]
   }
  ],
  "metadata": {
